[package]
name = "afxdp"
description = "AF XDP for Rust"
repository = "https://github.com/aterlo/afxdp-rs"
homepage = "https://github.com/aterlo/afxdp-rs"
version = "0.2.0"
authors = ["Dan Siemon <dan@aterlo.com>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["AF_XDP", "XDP"]
categories = ["network-programming"]
readme = "README.md"

[dependencies]
libbpf-sys = "0.2.0-3"
libc = "0.2"
errno = "0.2"
arraydeque = "0.4"

[dev-dependencies]
criterion = "0.3"
structopt = "0.3"
rlimit = "0.5.3"
crossbeam-channel = "0.5.0"

[[bench]]
name = "buf_pool"
harness = false
