[package]
name = "afxdp"
description = "AF XDP for Rust"
repository = "https://github.com/aterlo/afxdp-rs"
homepage = "https://github.com/aterlo/afxdp-rs"
version = "0.3.0"
authors = ["Dan Siemon <dan@aterlo.com>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["AF_XDP", "XDP"]
categories = ["network-programming"]
readme = "README.md"

[dependencies]
libbpf-sys = "0.3.0-1"
libc = "0.2"
errno = "0.2"
arraydeque = "0.4"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.3"
structopt = "0.3"
rlimit = "0.5"
crossbeam-channel = "0.5"
pnet = "0.27"
core_affinity = "0.5"
rtrb = "0.1"
ctrlc = "3.1"
cli-table = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

[[bench]]
name = "buf_pool"
harness = false
